--- a/less/home-page.less
+++ b/less/home-page.less
@@ -65,6 +65,7 @@
                 border-right: 50vw solid transparent;
                 border-bottom: 22.15vw solid @darkerTan;
                 margin: -9rem auto;
+                margin-top: -22.4vw;
                 h2
                 {
                     display: none;
